add active workspace indicator
nushell saving lives with easy & powerful json parsing

--- a/homes/x86_64-linux/tiago@nixos-lenovo/eww-config/eww-template.scss
+++ b/homes/x86_64-linux/tiago@nixos-lenovo/eww-config/eww-template.scss
@@ -50,6 +50,10 @@
     border-radius: 10px;
 }
 
+.workspaces > .current {
+    color: $widgets-bg;
+    background-color: $widgets-fg;
+}
 .workspaces {
     background-color: $widgets-bg;
     border-radius: 10px;
