add network indicator

--- a/homes/x86_64-linux/tiago@nixos-lenovo/eww-config/eww.template.scss
+++ b/homes/x86_64-linux/tiago@nixos-lenovo/eww-config/eww.template.scss
@@ -71,7 +71,9 @@ $charging-battery-color: #{{base0A}};
 .disk_usage,
 .memory,
 .time,
-.battery_normal {
+.battery_normal,
+.wifi,
+.music {
     background-color: $widgets-bg;
     border-radius: 10px;
     color: $widgets-fg;
