--- a/modules/home/vesktop/Stylix.theme.css.mustache
+++ b/modules/home/vesktop/Stylix.theme.css.mustache
@@ -7,7 +7,7 @@
 */
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css);
 .modeUnreadImportant_efb53e {
-	color: #{{base04}} !important;
+	color: #{{base0D}} !important; /* Color for unread messages */
 }
 :not(div[class*="userProfile"][class*="unThemed"]).theme-dark,
 :not(div[class*="userProfile"]).theme-light,
@@ -16,47 +16,47 @@ div[class*="userProfile"][class*="unThemed"].theme-light {
 	--background-primary: #{{base00}};
 	--background-mobile-primary: var(--background-primary);
 	--background-mobile-secondary: var(--background-secondary);
-	--background-secondary: #{{base00}};
-	--background-secondary-alt: #{{base00}};
-	--background-tertiary: #{{base00}};
+	--background-secondary: #{{base01}};
+	--background-secondary-alt: #{{base02}};
+	--background-tertiary: #{{base03}};
 	--background-floating: var(--background-primary);
 
-  --background-accent: #{{base04}};
-	--background-message-hover: #{{base01}}7F;
+  	--background-accent: #{{base04}};
+	--background-message-hover: #{{base01}};
 	--channeltextarea-background: transparent;
-	--activity-card-background: #{{base01}};
+	--activity-card-background: #{{base06}};
 	--deprecated-store-bg: transparent;
 	
 	
 	--elevation-low: inset 0 -1px 0 0 rgba(0, 0, 0, 0.3);
-	--channels-default: #{{base05}};
-	--deprecated-quickswitcher-input-background: #{{base00}};
-	--header-primary: #{{base04}};
-	--header-secondary: #{{base05}};
+	--channels-default: #{{base07}};
+	--deprecated-quickswitcher-input-background: #{{base08}};
+	--header-primary: #{{base09}};
+	--header-secondary: #{{base0A}};
 
 	--text-normal: #{{base05}};
-	--text-muted: #{{base05}};
+	--text-muted: #{{base03}};
 	
-	--interactive-muted: #{{base04}};
-	--interactive-normal: #{{base05}};
+	--interactive-muted: #{{base06}}; /* Lighter color for muted or disabled channels */
+	--interactive-normal: #{{base0B}}; /* Color for unselected channels */
 	
-	--interactive-hover: #{{base05}};
-	--interactive-active: #{{base05}};
+	--interactive-hover: #{{base0A}}; /* Color for hovered channels */
+	--interactive-active: #{{base09}}; /* Color for selected channels */
 	
-	--background-modifier-hover: #{{base01}};
-	--background-modifier-active: #{{base01}};
-	--background-modifier-selected: #{{base01}};
+	--background-modifier-hover: #{{base03}};
+	--background-modifier-active: #{{base02}};
+	--background-modifier-selected: #{{base03}};
 	
-	--deprecated-card-bg: #{{base00}};
-	--text-link: #{{base04}};
-	--focus-primary: #{{base0A}};
-  --modal-background: #{{base01}};
-  --modal-footer-background: #{{base00}};
+	--deprecated-card-bg: #{{base04}};
+	--text-link: #{{base05}};
+	--focus-primary: #{{base06}};
+  --modal-background: #{{base07}};
+  --modal-footer-background: #{{base08}};
 }
 /* Variables */
 :root {
     --font-primary: monospace, sans-serif;
     --font-display: var(--font-primary) !important;
-		--accentcolor: {{accent}};
-		--accentcolor2: {{accentAlt}};
+		--accentcolor: {{splitBase09}};
+		--accentcolor2: {{splitBase0A}};
 }
