--- a/modules/home/eww/eww.template.scss
+++ b/modules/home/eww/eww.template.scss
@@ -1,8 +1,8 @@
 $widgets-bg: #{{base00}};
-$widgets-fg: #{{base0D}};
+$widgets-fg: #{{base05}};
 $widgets-track: #{{base01}};
-$low-battery-color: #{{base00}};
-$charging-battery-color: #{{base08}};
+$low-battery-color: #{{base08}};
+$charging-battery-color: #{{base0B}};
 
 * {
     all: unset; //Unsets everything so you can style everything from scratch
@@ -102,6 +102,7 @@ $charging-battery-color: #{{base08}};
     border-color: lighten($widgets-bg, 10%);
     border-width: 1px;
     background-color: rgba($widgets-bg, {{desktopOpacity}});
+    color: $widgets-fg;
 }
 
 .shutdown-button {
