fonts: change sans serif fonts to Inter

--- a/modules/home/eww/eww.template.scss
+++ b/modules/home/eww/eww.template.scss
@@ -6,7 +6,7 @@ $charging-battery-color: #{{base0B}};
 
 * {
     all: unset; //Unsets everything so you can style everything from scratch
-    font-family: monospace;
+    font-family: {{ font }};
 }
 
 //Global Styles
