--- a/modules/home/eww/eww.template.scss
+++ b/modules/home/eww/eww.template.scss
@@ -46,12 +46,12 @@ $charging-battery-color: #{{base0B}};
 
 
 
-.workspaces button:hover {
+button:hover {
     color: $widgets-bg;
     background-color: $widgets-fg;
 }
 
-.workspaces button {
+button {
     padding: 0px 2px;
     margin: 5px;
     border-radius: 10px;
@@ -65,15 +65,6 @@ $charging-battery-color: #{{base0B}};
     margin-left: 6px;
 }
 
-
-.volume,
-.disk_usage,
-.memory,
-.time,
-.battery_normal,
-.wifi,
-.music {
-}
 .time {
     margin-right: 10px;
 }
