--- a/modules/home/eww/eww.scss.mustache
+++ b/modules/home/eww/eww.scss.mustache
@@ -12,8 +12,6 @@ $charging-battery-color: #{{base0B}};
 //Global Styles
 .bar {
     color: $widgets-fg;
-    background-color: rgba($widgets-bg, {{desktopOpacity}});
-    border-radius: 0px 0px 10px 10px;
     font-size: 10px;
 }
 .submap {
@@ -62,12 +60,28 @@ button {
     background-color: $widgets-fg;
 }
 .workspaces {
-    margin-left: 6px;
+    background-color: rgba($widgets-bg, {{desktopOpacity}});
+    border-radius: 10px;
+    border: 1px solid #{{ base0D }};
+    color: #{{ base0D }};
+    padding: 0px 5px;
 }
 
 .time {
-    margin-right: 10px;
+    background-color: rgba($widgets-bg, {{desktopOpacity}});
+    border-radius: 10px;
+    border: 1px solid #{{ base0B }};
+    color: #{{ base0B }};
+    padding: 0px 8px;
 }
+
+.indicators {
+    background-color: rgba($widgets-bg, {{desktopOpacity}});
+    border-radius: 10px;
+    border: 1px solid #{{ base08 }};
+    color: #{{ base08 }};
+}
+
 .battery_low {
     border-radius: 10px;
     color: $widgets-fg;
@@ -105,4 +119,20 @@ button {
         color: $widgets-bg;
         background-color: $widgets-fg;
     }
+}
+.music {
+    background-color: rgba($widgets-bg, {{desktopOpacity}});
+    border-radius: 10px;
+    border: 1px solid #{{ base0E }};
+    color: #{{ base0E }};
+    padding: 0px 1em;
+}
+.workspaces > button:hover, .workspaces > button.current  {
+    background-color: #{{base0D}};
+}
+.indicators > button:hover {
+    background-color: #{{base08}};
+}
+.music > button:hover {
+    background-color: #{{base0E}};
 }
